--- a/index.html
+++ b/index.html
@@ -9,10 +9,17 @@
 </head>
 <body>
     <header id="header_site">
+        <div class="logo_site">
+
+        </div>
+        <nav class="nav_site">
+
+        </nav>
 
     </header>
     <!-- /#header_site -->
     <main id="main_site">
+        
 
     </main>
     <!-- /#main_site -->
