--- a/index.html
+++ b/index.html
@@ -18,8 +18,26 @@
 
     </header>
     <!-- /#header_site -->
+
     <main id="main_site">
-        
+        <section class="section_img">
+
+        </section>
+        <section class="section_blog clearfix">
+            <header class="header_blog">
+
+            </header>
+            <aside class="aside_left ">
+
+            </aside>
+            <section class="section_center ">
+                
+            </section>
+            <aside class="aside_right">
+
+            </aside>
+
+        </section>
 
     </main>
     <!-- /#main_site -->
